<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_preview"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="20dp"
        android:background=""
        android:layout_width="match_parent"
        android:layout_height="240dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/button_back"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/button_bookmark"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:background="@drawable/rounded_background"
                android:layout_width="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:textSize="13sp"
                    android:src="@drawable/star_fill"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/course_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/course_rating"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </LinearLayout>
            <TextView
                android:id="@+id/course_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/course_published_date"
                android:textColor="@color/white"
                android:background="@drawable/rounded_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/course_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:text="@string/course_title"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <Button
                android:id="@+id/course_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_start"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/green"
                app:layout_constraintTop_toBottomOf="@id/course_title"/>
            <Button
                android:id="@+id/course_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_platform"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:backgroundTint="@color/dark_grey"
                app:layout_constraintTop_toBottomOf="@id/course_start"/>
            <TextView
                android:id="@+id/course_desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:text="@string/course_desc_title"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/course_platform"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/course_desc"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/course_desc"
                android:textColor="@color/light_gray"
                app:layout_constraintTop_toBottomOf="@id/course_desc_title"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>