<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vacancy_background"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_margin="12dp"
    android:background="@drawable/rounded_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_preview"
        android:background=""
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="110dp">
        <ImageView
            android:id="@+id/course_is_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/bookmark"
            android:background="@drawable/rounded_background"
            android:layout_margin="8dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:background="@drawable/rounded_background"
                android:layout_width="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:textSize="13sp"
                    android:src="@drawable/star_fill"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/course_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/course_rating"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </LinearLayout>
            <TextView
                android:id="@+id/course_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/course_published_date"
                android:textColor="@color/white"
                android:background="@drawable/rounded_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/course_title"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/course_desc"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_height="0dp"
            android:text="@string/course_desc"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/course_title"
            app:layout_constraintBottom_toTopOf="@id/course_price"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/course_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/course_price"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:src="@drawable/button_more"
            android:background=""
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/course_more" />
        <Button
            android:id="@+id/course_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:alpha="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>